<?xml version="1.0"?>
<package format="2">
  <name>amswarmx</name>
  <version>0.0.0</version>
  <description>The amswarmx package</description>
  <maintainer email="vivek@todo.todo">vivek</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>octomap</build_depend>
  <export>
  </export>
</package>
